# MyMusic

./: Body.qml  CMakeLists.txt  Footer.qml  Header.qml  MusicSlider.qml  MySlider.qml  NextButton.qml  OrderButton.qml  PlayButton.qml  README.md  SongDelegate.qml  SongHeader.qml  SongListDelegate.qml  SongListHeader.qml  SongListPopup.qml  SongPopup.qml  VolumeArea.qml  icon.rc  main.cpp  main.qml  qml.qrc
src/js/: time.js
